Implemented login and started dashboard

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,17 +2,40 @@
 	"alt": {
 		"naito-one-logo": "Naito One Logo"
 	},
+	"error": {
+		"credentials": "These credentials do not match our records.",
+		"unknown": "An error occurred. Please try again later."
+	},
+	"menu": {
+		"alerts": "Alerts",
+		"explore": "Explore the data",
+		"infos": "Information",
+		"objectives": "Objectives"
+	},
 	"pages": {
+		"index": {
+			"hello": "Hello, {name}",
+			"summary": "You have <strong>{sensors} sensors</strong> online on <strong>{sites} sites</strong>.",
+			"summary-small": "<strong>{sensors} sensors</strong> online on <strong>{sites} sites</strong>.",
+			"title": "Dashboard"
+		},
 		"login": {
 			"form": {
 				"email": "Email address",
 				"forgotten-password": "Forgotten password",
 				"password": "Password",
-				"remember-me": "Remember me",
+				"remember-me": "Stay logged in",
 				"submit": "Login"
 			},
 			"new-client": "Not a client yet ? Discover meters.ch !",
 			"title": "Login portal of Meters.ch"
+		},
+		"reset": {
+			"form": {
+				"explain": "Enter your email address to receive a reset link.",
+				"submit": "Reset password"
+			},
+			"title": "Forgotten password"
 		}
 	}
 }
