--- a/locales/fr.json
+++ b/locales/fr.json
@@ -4,7 +4,8 @@
     "set_locale": "Choix de la langue",
     "back": "Retour",
     "cancel": "Annuler",
-    "confirm": "Valider"
+    "confirm": "Valider",
+    "no_results": "Aucun résultat"
   },
   "features": {
     "resource_types": {
@@ -28,7 +29,8 @@
   "api": {
     "user_updated": "Informations utilisateur enregistrées avec succès",
     "objective_updated": "Objectif enregistré avec succès",
-    "objective_created": "Nouvel objectif créé avec succès"
+    "objective_created": "Nouvel objectif créé avec succès",
+    "objective_deleted": "Objectif supprimé avec succès"
   },
   "menu": {
     "alerts": "Alertes",
@@ -86,7 +88,9 @@
         "resource": "Ressource",
         "objective": "Objectif de consommation",
         "weekly_compare": "7 derniers jours",
-        "monthly_compare": "30 derniers jours"
+        "monthly_compare": "30 derniers jours",
+        "find_resource": "Rechercher une ressource",
+        "missing_resource": "Veuillez sélectionner une resource pour valider l'objectif"
       }
     },
     "login": {
