--- a/locales/fr.json
+++ b/locales/fr.json
@@ -11,7 +11,8 @@
     "select_all": "Tout sélectionner",
     "select_none": "Tout déselectionner",
     "selector_close": "Fermer les résultats du sélecteur",
-    "optional": "Optionel"
+    "optional": "Optionel",
+    "no_data": "Pas de données pour la période sélectionnée: {period}"
   },
   "features": {
     "resource_types": {
@@ -113,7 +114,8 @@
         "confirm": "Ajouter"
       },
       "form": {
-        "find_resources": "Sélectionnez des ressources"
+        "find_resources": "Sélectionnez des ressources",
+        "no_resources": "Veuillez sélectionner au moins une ressource pour commencer"
       }
     },
     "objectives": {
