--- a/locales/en.json
+++ b/locales/en.json
@@ -11,9 +11,9 @@
     "select_all": "Select all",
     "select_none": "Deselect all",
     "selector_close": "Close the selector's results",
-    "optional": "Optional",
     "no_data": "No data for the given period: {period}",
-    "no_undoing": "This action cannot be undone. Please confirm."
+    "no_undoing": "This action cannot be undone. Please confirm.",
+    "and_others": "and others"
   },
   "features": {
     "resource_types": {
@@ -78,7 +78,13 @@
       "site": "site | sites",
       "summary-small": "<strong>{sensor}</strong> online on <strong>{site}</strong>.",
       "title": "Dashboard",
-      "description": "View your saved graphs and access the functionalities of the Meters website"
+      "description": "View your saved charts and access the functionalities of the Meters website",
+      "open_chart": "Open chart",
+      "edit": {
+        "title": "Edit the dashboard",
+        "cancel_last": "Cancel last action",
+        "confirm_all": "Confirm all changes"
+      }
     },
     "infos": {
       "title": "Information",
@@ -100,7 +106,7 @@
     },
     "explore": {
       "title": "Explore",
-      "description": "Explore your data in details, download it and save graphs to your dashboard",
+      "description": "Explore your data in details, download it and save charts to your dashboard",
       "period": "Period",
       "to": "to",
       "download": {
@@ -110,7 +116,7 @@
       },
       "bookmark": {
         "title": "Bookmark the current chart",
-        "name": "Chart name",
+        "name": "Chart name (optional)",
         "relative_period": "The choosen relative period will be kept:",
         "confirm": "Bookmark"
       },
