--- a/locales/fr.json
+++ b/locales/fr.json
@@ -115,7 +115,7 @@
         "confirm": "Télécharger"
       },
       "bookmark": {
-        "title": "Ajouter un signer pour le graphique actuel",
+        "title": "Ajouter un signet pour le graphique actuel",
         "name": "Nom du graphique (optionel)",
         "relative_period": "La période relative choisie sera conservée:",
         "confirm": "Ajouter"
